# llamphouse

./: .gitignore  CHANGELOG.md  README.md  alembic.ini  constraints-min.txt  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-check.yml  constraints-min.in  release.yml
docker/: docker-compose.prod.yml  docker-compose.yml  otel-collector-config.yaml
docker/runtime/: Dockerfile
docs/: ARCHITECTURE_DRAFT.md  api-compatibility.md  configuration.md  contributing.md  deployment.md  examples.md  index.md
docs/concepts/: adapters.md  agents.md  context.md  multi-agent.md
docs/getting-started/: adding-llm.md  installation.md  quickstart.md
docs/guides/: compass.md  config-store.md  streaming.md  tool-calls.md  tracing.md
docs/overrides/: footer.html
examples/01_HelloWorld/: README.md  client.py  requirements.txt  server.py
examples/02_Chat/: README.md  client.py  requirements.txt  server.py
examples/03_CustomAuth/: server.py
examples/03_Streaming/: README.md  client.py  server.py
examples/04_ThreadWorker/: README.md
examples/04_ToolCall/: README.md  client.py  requirements.txt  server.py
examples/05_OrchestratorAgent/: README.md  client.py  server.py
examples/05_Streaming/: README.md  client.py  server.py
examples/06_AgentHandover/: README.md  client.py  server.py
examples/06_GeminiStreaming/: requirements.txt  server.py
llamphouse/: __init__.py
migrations/: env.py
tests/: conftest.py  filtered_openapi.yml  llamphouse_test.py  requirements.txt  test.py
(+192 files in other folders)
