[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamphouse"
description = "LLAMPHouse — Serving Your LLM Apps, Scalable and Reliable"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "stack-wise.co.uk", email = "pieter@stack-wise.co.uk" }]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["llamphouse"]
include = ["llamphouse", "llamphouse.core", "llamphouse.core.*"]
namespaces = true

[tool.setuptools.package-data]
"llamphouse.core.adapters.dashboard" = ["static/**/*"]
"llamphouse.core.adapters.compass" = ["static/**/*"]

[project.scripts]
llamphouse = "llamphouse.core.cli:main"

[tool.setuptools.dynamic]
version = { attr = "llamphouse.__version__" }
dependencies = { file = ["requirements.txt"] }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "openai>=2.21.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
